# SteamDepotDownloaderGUI

./: .eslintrc.yml  .gitignore  .gitmodules  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DepotDownloaderGUI.csproj  DepotDownloaderGUI.sln  Form1.Designer.cs  Form1.cs  Form1.resx  LICENSE.md  Program.cs  README.md  SECURITY.md  TEST  contributing.md  downloadGUI.Designer.cs  downloadGUI.cs  downloadGUI.resx  downloader.js  downloader2.js  electron-builder.yml  eslint.config.js  index.html  index.js  index2.html  instructions.md  main.js  main.py  oneko.js  package-lock.json  package.json  package.sh  pnpm-lock.yaml  renderer.js  style.css  styles.css  test.py  (+3 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  download_problem.md  feature_request.md
.github/workflows/: build.yml  build.yml.wip  build_debug.yml  build_release.yml  codeql-analysis.yml  github-repo-stats.yml  main.yml
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
depotdownloader/: DepotDownloader.deps.json  DepotDownloader.sln  README.md  depotdownloader.bat
depotdownloader/DepotDownloader/: AccountSettingsStore.cs  CDNClientPool.cs  ContentDownloader.cs  DepotConfigStore.cs  DepotDownloader.csproj  DownloadConfig.cs  Program.cs  ProtoManifest.cs  Steam3Session.cs  Util.cs  runtimeconfig.template.json
depotdownloader/DepotDownloader/Properties/: AssemblyInfo.cs  launchSettings.json
src/: App.tsx  context.ts  index.html  main.js  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: depotdownloader.rs  main.rs  steam.rs  terminal.rs
src/components/: ClipboardParser.tsx  DownloaderForm.tsx  DownloaderOutput.tsx  FormInput.tsx  Settings.tsx
src/css/: App.css  style.css
src/ts/: main.ts  preload.ts  settings.ts
