[package]
name = "vectum"
version = "3.0.0-alpha.2"
description = "Download older versions of Steam games with DepotDownloader"
authors = ["mmvanheusden"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-dialog = "2.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive-getters = "0.5.0"
sha256 = "1.5.0"
reqwest = { version = "0.12.8",features = ["blocking"] }
zip = "2.2.0"
async-process = "2.3.0"

[profile.dev]
incremental = true
