[package]
name = "vectum"
version = "3.0.1"
description = "Download older versions of Steam games with DepotDownloader"
authors = ["mmvanheusden"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
derive-getters = "0.5.0"
reqwest = { version = "0.12.23",features = ["blocking"] }
zip = "5.0.0"



# Bacon - https://dystroy.org/bacon/
# Mold - https://github.com/rui314/mold#how-to-use
# https://discord.com/channels/616186924390023171/731495028677148753/1254902668376150149
[profile.dev]
incremental = true
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
